src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
/* ... */
.bp-media-upload-tab {
	margin-right: 15px;
}

#buddypress ul.bp-list.loading,
#bbpress-forums ul.bp-list.loading {
	background: #fff;
	padding: 20px;
	text-align: center;
}

.bb-media-model-inner {

	.gif-media-search-dropdown.open {
		width: 300px;
		left: -60px;
	}

	.gif-media-search-dropdown:before {
		left: 80px;
	}

	.emojionearea .emojionearea-picker.emojionearea-picker-position-bottom {
		left: -100px;
	}

	.emojionearea .emojionearea-picker.emojionearea-picker-position-bottom .emojionearea-wrapper:after {
		left: 102px;
	}
}

img.emoji,
img.emojioneemoji {
	display: inline-block;
	margin: 3px;
	width: 24px !important;
	height: 24px !important;
}

